--- a/model.ipynb
+++ b/model.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Adopted from https://github.com/asteroid-team/asteroid/blob/master/asteroid/losses/cluster.py\n",
-    "class deep_clustering_loss(BaseMetricLossFunction):\n",
+    "class DeepClusteringLoss(BaseMetricLossFunction):\n",
     "    def compute_loss(self, embedding, tgt_index, binary_mask=None):\n",
     "        spk_cnt = len(tgt_index.unique())\n",
     "\n",
@@ -110,15 +110,15 @@
     "            bidirectional=True\n",
     "        )\n",
     "        self.dropout = nn.Dropout(dropout)\n",
-    "        lstm_output_dim = 2 * hidden_size\n",
+    "        lstm_output_dim = 2 * hidden_layer_size\n",
     "        self.embedding_layer = nn.Linear(lstm_output_dim, channel_in * embedding_dim)\n",
     "        self.embedding_activation = nn.Tanh()\n",
     "        self.epsilon = epsilon\n",
     "        \n",
-    "    def forward(self, x):\n",
+    "    def forward(self, input_data):\n",
     "        batch_size, _, frames = input_data.shape\n",
     "        if self.take_log:\n",
-    "            x = torch.log(x + self.epsilon)\n",
+    "            x = torch.log(input_data + self.epsilon)\n",
     "        \n",
     "        # LSTM layers\n",
     "        lstm_output = self.lstm(x.permute(0, 2, 1))\n",
@@ -151,7 +151,7 @@
     "    def forward(self, x):\n",
     "        if len(x.shape) == 2:\n",
     "            x = x.unsqueeze(1)\n",
-    "        tf_representation = self.encode(x)\n",
+    "        tf_representation = self.encoder(x)\n",
     "        spectral_magnitude = mag(tf_representation)\n",
     "        normalised_embedding = self.embedding(spectral_magnitude)\n",
     "        return normalised_embedding\n",
@@ -188,8 +188,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6a54c6a3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drop 0 utterances from 800 (shorter than 3 seconds)\n",
+      "Drop 0 utterances from 200 (shorter than 3 seconds)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_loader, val_loader = LibriMix.loaders_from_mini(batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ac189039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mixture, sources = next(iter(train_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cc68682b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc, dec = make_enc_dec('stft', n_filters=512, kernel_size=16, stride=8)\n",
+    "embedding = Embedding(enc.n_feats_out // 2)\n",
+    "model = Model(enc, embedding, dec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "93bb1d62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute magnitude spectrograms and ideal ratio mask (IRM)\n",
+    "src_mag_spec = mag(model.encoder(sources))\n",
+    "\n",
+    "# Normalise to get the real_mask. Maximise to get the binary mask\n",
+    "real_mask = src_mag_spec / (src_mag_spec.sum(1, keepdim=True) + 1e-8)\n",
+    "binary_mask = real_mask.argmax(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ef7f00df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.0001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1893fcad",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pred = model(mixture)\n",
+    "loss = DeepClusteringLoss()\n",
+    "deep_clustering_loss = loss.compute_loss(pred, binary_mask)\n",
+    "deep_clustering_loss.mean().backward()\n",
+    "optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d45a86",
    "metadata": {},
    "outputs": [],
    "source": []
